<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@layout/layout_bg"
        android:gravity="center"
        android:paddingBottom="3dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="3dp" >

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NewWeight"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold"
            android:typeface="monospace" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="3dp"
        android:background="@layout/layout_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp" >

        <DatePicker
            android:id="@+id/dp_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:calendarViewShown="false" />

        <EditText
            android:id="@+id/et_k_p"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tv_typew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WType"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/b_addw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Addweight" />

    </LinearLayout>

</LinearLayout>
